# k8s-security-scanner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: misconfig-pods.yaml
scanner/: cli.py  config.py  models.py  runner.py
scanner/checks/: pod_checks.py  rbac_checks.py
scanner/reporter/: console.py  json_reporter.py
scanner/scanners/: base.py  pod_scanner.py  rbac_scanner.py
scanner/utils/: k8s_helpers.py
tests/: test_pod_checks.py  test_rbac_checks.py
tests/fixtures/rbac/: cluster_admin_binding.json  compliant_role.json  wildcard_role.json
